--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+#quarkus.grpc.clients.svc.host=localhost
 quarkus.grpc.clients.hello.host=localhost
-%test.quarkus.grpc.clients.hello.port=9001
 quarkus.grpc.server.enable-reflection-service=true
+quarkus.application.name=myservice
+quarkus.opentelemetry.enabled=true
+quarkus.opentelemetry.tracer.exporter.otlp.endpoint=http://localhost:4317
+#quarkus.opentelemetry.tracer.exporter.otlp.headers=Authorization=Bearer my_secret
+quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n  
+%test.quarkus.grpc.clients.hello.port=9001
